--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\josep\\AppData\\Roaming\\NetBeans\\12.5\\tomcat90.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 9.0
-j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0
-user.properties.file=C:\\Users\\josep\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+deploy.ant.properties.file=C:\\Users\\fcast\\AppData\\Roaming\\NetBeans\\12.5\\tomcat90.properties
+file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\fcast\\Documents\\NetBeansProjects\\mysql-connector-j-8.0.33
+j2ee.server.domain=C:/Program Files/Apache Software Foundation/Tomcat 9.0_Tomcat09
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0_Tomcat09:base=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0_Tomcat09
+user.properties.file=C:\\Users\\fcast\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
